--- a/modules/server/src/main/resources/vm/node/manage/projectInfo.vm
+++ b/modules/server/src/main/resources/vm/node/manage/projectInfo.vm
@@ -21,10 +21,14 @@
 <table class="layui-table" id="tab_project" lay-filter="tab_project" style="margin: 0;"></table>
 
 <script type="text/html" id="bar_projects">
+    {{# if (d.manager) { }}
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">控制台</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-warm" lay-event="update">配置</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm" lay-event="file">文件</a>
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="ram">监控</a>
+    {{# }else{ }}
+    没有权限
+    {{# } }}
 </script>
 <script type="text/html" id="status_templ">
     <div title="请到控制台中管理项目">
