项目管理操作日志

--- a/modules/server/src/main/resources/vm/common/head.vm
+++ b/modules/server/src/main/resources/vm/common/head.vm
@@ -82,7 +82,7 @@
     ## 获取自适应的socket
     function getSocketHost() {
         var pro = location.protocol === 'https:' ? 'wss://' : 'ws://';
-        return pro + window.location.host + "$!jpomProxyPath/$!node.id";
+        return pro + window.location.host + "$!jpomProxyPath";
     }
 
     function getTopQueryString(name) {
@@ -214,5 +214,25 @@
             var uploadResult = upload.render(defData);
             fn && fn(uploadResult);
         });
+    }
+
+    function formateTime(time) {
+        if (!time) {
+            return 0;
+        }
+        var date = new Date();
+        date.setTime(time);
+        var y = date.getFullYear();
+        var m = date.getMonth() + 1;
+        m = m < 10 ? ('0' + m) : m;
+        var d = date.getDate();
+        d = d < 10 ? ('0' + d) : d;
+        var h = date.getHours();
+        h = h < 10 ? ('0' + h) : h;
+        var minute = date.getMinutes();
+        var second = date.getSeconds();
+        minute = minute < 10 ? ('0' + minute) : minute;
+        second = second < 10 ? ('0' + second) : second;
+        return y + '-' + m + '-' + d + ' ' + h + ':' + minute + ':' + second;
     }
 </script>
