--- a/modules/server/src/main/resources/vm/index.vm
+++ b/modules/server/src/main/resources/vm/index.vm
@@ -65,11 +65,15 @@
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;"
+                       data-options="{'id':'outgiving', 'title':'节点分发', 'url':'./outgiving/list.html'}">节点分发</a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;"
                        data-options="{'id':'user', 'title':'用户管理', 'url':'./user/list'}">用户管理</a>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;"
-                       data-options="{'id':'user', 'title':'操作日志', 'url':'./user/log/list.html'}">操作日志</a>
+                       data-options="{'id':'user_log', 'title':'操作日志', 'url':'./user/log/list.html'}">操作日志</a>
                 </li>
             </ul>
         </div>
